depoloyments_apr23_2023/vmas/vmas-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vmas
  name: vmas
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: vmas
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vmas
    spec:
      containers:
      - image: maximuspowers/vmas #make sure this matches the docker tag, set it with "docker tag [original tag] maximuspowers/[new tag]" and then "docker push maximuspowers/[new tag]" to put it on hub
        imagePullPolicy: Always
        name: vmas
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
