depoloyments_apr23_2023/vmas/vmas-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmas
spec:
  selector:
    app: vmas
  ports:
    - protocol: TCP
      port: 5005 # the port you want to access it on
      targetPort: 5000 # the port that app runs on
  type: LoadBalancer
