depoloyments_apr23_2023/vmas/vmas-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vmas-svc
spec:
  type: ClusterIP
  selector:
    app: vmas
  ports:
  - name: http
    port: 5005
    targetPort: 5000
